[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/PlatformSpawner.gd" type="Script" id=1]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 200, 1 )
b = Vector2( -200, -1 )

[node name="PlatformSpawner" type="Node"]
script = ExtResource( 1 )

[node name="PlatformTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Platforms" type="Node" parent="."]

[node name="SpawnerLayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerLayer"]
position = Vector2( 184.158, 255.908 )
shape = SubResource( 1 )
[connection signal="timeout" from="PlatformTimer" to="." method="_on_PlatformTimer_timeout"]
[connection signal="body_entered" from="SpawnerLayer" to="." method="_on_SpawnerLayer_body_entered"]
